attempting to fix strange gap on footer

--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,8 @@ body
     height: 25%;
     border-top: 3px solid black;
     border-bottom: 1px solid black;
+    margin: 0px;
+    padding: 0px;
 }
 
 #footer-text
